[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "brlp"
version = "0.0.0"
authors = [ { name="Lemuel Puglisi", email="lemuelpuglisi001@gmail.com" } ]
description = "Enhancing Spatiotemporal Disease Progression Models via Latent Diffusion and Prior Knowledge"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml",
    "numpy == 1.26.3",
    "pandas == 2.1.1",
    "matplotlib == 3.9.1",
    "nibabel == 5.3.1",
    "torch == 2.1.0",
    "tensorboard == 2.14.0",
    "monai == 1.3.1",
    "monai-generative == 0.2.3",
    "tqdm == 4.66.1",
    "leaspy @ git+https://github.com/Fjr9516/leaspy-clone.git",
    "rich"
]

[project.scripts]
brlp = "brlp.cli:infer"

[options]
package_dir = "src"

[options.packages.find]
where="src"